# Compute-Cluster-Thermal-Diffusion-Simulation

./: Batchqueue.slurm  Boucle.sh  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.6755add  Heatsim_ p_16rp_0_timeMeasurement.csv  Heatsim_ p_16rp_1_timeMeasurement.csv  Heatsim_ p_16rp_2_timeMeasurement.csv  Heatsim_ p_16rp_3_timeMeasurement.csv  Heatsim_ p_1rp_0_timeMeasurement.csv  Heatsim_ p_1rp_1_timeMeasurement.csv  Heatsim_ p_1rp_2_timeMeasurement.csv  Heatsim_ p_2rp_0_timeMeasurement.csv  Heatsim_ p_2rp_1_timeMeasurement.csv  Heatsim_ p_2rp_2_timeMeasurement.csv  Heatsim_ p_32rp_0_timeMeasurement.csv  Heatsim_ p_32rp_1_timeMeasurement.csv  Heatsim_ p_32rp_2_timeMeasurement.csv  Heatsim_ p_32rp_3_timeMeasurement.csv  Heatsim_ p_4rp_0_timeMeasurement.csv  Heatsim_ p_4rp_1_timeMeasurement.csv  Heatsim_ p_4rp_2_timeMeasurement.csv  README.md  benchmark.csv  benchmark2.csv  heatsim.cpp  heatsim.cpp.tmp  inf5171-tp2.odt  part.msh  show.py  stdout_2753.out  stdout_2789.out  stdout_2791.out  stdout_2794.out  stdout_2875.out  stdout_2876.out  stdout_2877.out  stdout_2948.out  stdout_6575.out  stdout_6576.out  (+25 more)
data/: large10.txt  overlap2.txt  part.geo  part.msh  small10.txt  small2.txt
sortie_slurm_Heatsim/: sortie_Heatsim_16_1.out  sortie_Heatsim_16_3.out  sortie_Heatsim_16_4.out  sortie_Heatsim_1_1.out  sortie_Heatsim_1_2.out  sortie_Heatsim_1_3.out  sortie_Heatsim_1_4.out  sortie_Heatsim_2_2.out  sortie_Heatsim_2_3.out  sortie_Heatsim_2_4.out  sortie_Heatsim_32_1.out  sortie_Heatsim_32_2.out  sortie_Heatsim_32_3.out  sortie_Heatsim_32_4.out  sortie_Heatsim_4_1.out  sortie_Heatsim_4_3.out  sortie_Heatsim_4_4.out  sortie_Heatsim_8121.out  sortie_Heatsim_8122.out  sortie_Heatsim_8125.out  sortie_Heatsim_8126.out  sortie_Heatsim_8129.out  sortie_Heatsim_8130.out  sortie_Heatsim_8134.out  sortie_Heatsim_8138.out  sortie_Heatsim_8157.out  sortie_Heatsim_8158.out  sortie_Heatsim_8159.out  sortie_Heatsim_8161.out  sortie_Heatsim_8162.out  (+6 more)
src/: CMakeLists.txt  kmeanproblem.cpp  kmeanproblem.h  kmeans.cpp  kmeans.h  kmeans_benchmark.cpp  kmeans_parallel.cpp  kmeans_parallel.h  main.cpp  modules.cpp  modules.h  point.cpp  point.h
(+101 files in other folders)
